<resources>
    <string name="app_name">LightWeight</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="create_new_account">Create new account</string>
    <string name="email">Email</string>
    <string name="facebook_app_id" translatable="false">188201648926828</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb188201648926828</string>
    <string name="enter_valid_email">Enter a valid email</string>
    <string name="password_too_short">Password needs to be atleast 6 characters</string>
    <string name="sign_up_successful">Sign up successful</string>
    <string name="sign_up_failed">Sign up failed</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="field_cant_be_empty">Field can\'t be empty</string>
    <string name="log_in_using_email">Log in using Email</string>
    <string name="or">Or</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="add_exercise">Exercise</string>
    <string name="title_activity_bottom_navigation">Bottom_navigation</string>
    <string name="title_analytics">Analytics</string>
    <string name="title_feed">Feed</string>
    <string name="title_social">Social</string>

    <string name="timing">Timing</string>
    <string name="total">Total</string>
    <string name="total_time">Total time</string>
    <string name="average_speed">Average speed</string>
    <string name="top_speed">Top speed</string>
    <string name="fitness_exercise">Fitness exercise</string>
    <string name="average_cadence">Average cadence</string>
    <string name="top_cadence">Top cadence</string>
    <string name="average_pulse_ca">Average_pulse</string>
    <string name="average_pulse_sa">Average pulse</string>
    <string name="max_pulse">Max pulse</string>
    <string name="max_force">Max force</string>
    <string name="max_cadence">Max cadence</string>
    <string name="calories">Calories</string>
    <string name="speed">Speed</string>


    <string name="add_set">Add set</string>
    <string name="set">Set</string>
    <string name="weight">Weight</string>

    <string name="reps">Reps</string>
    <string name="delete_exercise_button">delete_exercise_button</string>
    <string name="save_workout">Save workout</string>
    <string name="new_workout_name">Workout name</string>
    <string name="how_did_it_go">How did it go?</string>
    <string name="date">Date</string>
    <string name="edit">Edit</string>
    <string name="time">Time</string>
    <string name="pulse">Pulse</string>
    <string name="force">Force</string>
    <string name="cadence">Cadence</string>
    <string name="distance">Distance</string>
    <string name="temperature">Temperature</string>
    <string name="average_temperature">Average temperature</string>
    <string name="min_temperature">Min temperature</string>
    <string name="max_temperature">Max temperature</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>
    <string name="profile_name">Name:</string>
    <string name="profile_age">Age:</string>
    <string name="profile_email">Email:</string>
    <string name="profile_information">Profile information</string>
    <string name="new_password">New Password</string>
    <string name="save_password">Save password</string>
    <string name="login_failed">Login failed</string>
    <string name="average_force">Average force</string>
    <string name="save">save</string>
    <string name="edit_workout">Edit Workout</string>
    <string name="choose_a_new_exercise">Choose a new Exercise</string>
    <string name="delete_workout_message">Do you really want to delete?</string>


    <string name="edit_profile">Edit profile</string>
    <string name="change_password">Change password</string>
    <string name="user_name">User name</string>
    <string name="friends">Friends</string>

    <string name="confirm_password">Confirm Password</string>
    <string name="save_profile">Save profile</string>

    <!--Todo allt efter detta! -->


    <string name="delete">Delete</string>
    <string name="delete_workout">Delete workout</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add">Add</string>
    <string name="friend_name">Friend\'s name</string>
    <string name="add_friends">Add friends</string>
    <string name="remove">Remove</string>
    <string name="old_password">Current password</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="password_successfully_changed">Password successfully changed</string>
    <string name="invalid_password">Invalid password</string>
    <string name="title">Title</string>
    <string name="new_cycling_workout">New Cycling Workout</string>
    <string name="new_running_workout">New Running Workout</string>
    <string name="new_gym_workout">New Gym Workout</string>
    <string name="Km">Km</string>
    <string name="h_m_s">h:m:s</string>
    <string name="Km_h">Km/h</string>
    <string name="bpm">Bpm</string>
    <string name="watts">W</string>
    <string name="rpm">Rpm</string>
    <string name="k_cal">Kcal</string>
    <string name="log_out_message">Do you want to log out?</string>
    <string name="cycling">Cycling</string>
    <string name="gym">Gym</string>
    <string name="run">Running</string>
    <string name="title_of_the_workout">Title of the workout</string>


</resources>
