<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="5dp"
    tools:context=".ui.workouts.cycling.NewCyclingWorkoutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/divider"
            android:text="@string/distance"
            android:textColor="@color/text_divider" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutOutlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:suffixText="@string/Km">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/cycling_distance_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/distance"
                android:inputType="numberDecimal"
                android:textColor="@color/text_content" />
            <requestFocus/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/divider"
            android:text="@string/time"
            android:textColor="@color/text_divider" />


        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutOutlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:suffixText="@string/h_m_s">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cycling_total_time_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/total_time"
                android:inputType="time"
                android:textColor="@color/text_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/divider"
            android:text="@string/speed"
            android:textColor="@color/text_divider" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutOutlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:suffixText="@string/Km_h">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cycling_average_speed_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/average_speed"
                android:inputType="numberDecimal"
                android:textColor="@color/text_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutOutlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:suffixText="@string/Km_h">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cycling_top_speed_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/top_speed"
                android:inputType="numberDecimal"
                android:textColor="@color/text_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/divider"
            android:text="@string/pulse"
            android:textColor="@color/text_divider" />


        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutOutlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:suffixText="@string/bpm">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cycling_average_pulse_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/average_pulse_sa"
                android:inputType="number"
                android:textColor="@color/text_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutOutlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:suffixText="@string/bpm">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cycling_max_pulse_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/max_pulse"
                android:inputType="number"
                android:textColor="@color/text_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/divider"
            android:text="@string/force"
            android:textColor="@color/text_divider" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutOutlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:suffixText="@string/watts">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cycling_average_force_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/average_force"
                android:inputType="number"
                android:textColor="@color/text_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutOutlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:suffixText="@string/watts">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cycling_max_force_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/max_force"
                android:inputType="number"
                android:textColor="@color/text_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/divider"
            android:text="@string/cadence"
            android:textColor="@color/text_divider" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutOutlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:suffixText="@string/rpm">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cycling_average_cadence_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/average_cadence"
                android:inputType="number"
                android:textColor="@color/text_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutOutlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:suffixText="@string/rpm">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cycling_max_cadence_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/max_cadence"
                android:inputType="number"
                android:textColor="@color/text_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutOutlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:suffixText="@string/k_cal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cycling_calories_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/calories"
                android:inputType="number"
                android:textColor="@color/text_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/cycling_save_button"
            style="@style/ButtonTextOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/save_workout"
            android:visibility="gone" />

        <Button
            android:id="@+id/cycling_edit_button"
            style="@style/ButtonTextOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/edit_workout"
            android:visibility="gone" />

        <Button
            android:id="@+id/cycling_delete_button"
            style="@style/ButtonTextOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/delete_workout"
            android:visibility="gone" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>