<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/divider"
            android:text="@string/time"
            android:textColor="@color/text_divider" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/TextInputLayoutAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_cycling_total_time_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/total_time"
                android:textColor="@color/text_content"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/divider"
            android:text="@string/speed"
            android:textColor="@color/text_divider" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/TextInputLayoutAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_cycling_average_speed_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/average_speed"
                android:textColor="@color/text_content"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/TextInputLayoutAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_cycling_top_speed_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/top_speed"
                android:textColor="@color/text_content"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/divider"
            android:text="@string/pulse"
            android:textColor="@color/text_divider"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/TextInputLayoutAppearance">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_cycling_average_pulse_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/average_pulse_sa"
                android:textColor="@color/text_content"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/TextInputLayoutAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_cycling_max_pulse_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/max_pulse"
                android:textColor="@color/text_content"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/divider"
            android:text="@string/force"
            android:textColor="@color/text_divider" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/TextInputLayoutAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_cycling_average_force_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/average_force"
                android:textColor="@color/text_content"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/TextInputLayoutAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_cycling_max_force_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/max_force"
                android:textColor="@color/text_content"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/divider"
            android:text="@string/cadence"
            android:textColor="@color/text_divider" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/TextInputLayoutAppearance">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_cycling_average_cadence_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/average_cadence"
                android:textColor="@color/text_content"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/TextInputLayoutAppearance">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_cycling_max_cadence_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/max_cadence"
                android:textColor="@color/text_content"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/divider"
            android:text="@string/calories"
            android:textColor="@color/text_divider" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/TextInputLayoutAppearance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_cycling_calories_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/calories"
                android:textColor="@color/text_content"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/view_cycling_edit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_button"
            android:text="@string/edit"
            android:textColor="@color/text_button" />


    </LinearLayout>
</androidx.core.widget.NestedScrollView>