<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.workouts.running.NewRunningWorkoutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/divider"
            android:text="@string/distance"
            android:textColor="@color/text_divider" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayoutOutlined">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/running_distance_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/distance"
                android:inputType="numberDecimal"
                android:textColor="@color/text_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/divider"
            android:text="@string/time"
            android:textColor="@color/text_divider" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayoutOutlined">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/running_total_time_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/total_time"
                android:inputType="time"
                android:textColor="@color/text_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/divider"
            android:text="@string/speed"
            android:textColor="@color/text_divider" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayoutOutlined">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/running_average_speed_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/average_speed"
                android:inputType="numberDecimal"
                android:textColor="@color/text_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            style="@style/TextInputLayoutOutlined">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/running_top_speed_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/top_speed"
                android:inputType="numberDecimal"

                android:textColor="@color/text_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/divider"
            android:text="@string/pulse"
            android:textColor="@color/text_divider" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayoutOutlined">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/running_average_pulse_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/average_pulse_sa"
                android:inputType="number"
                android:textColor="@color/text_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayoutOutlined">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/running_max_pulse_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/max_pulse"
                android:inputType="number"
                android:textColor="@color/text_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/divider"
            android:text="@string/calories"
            android:textColor="@color/text_divider" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputLayoutOutlined">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/running_calories_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/calories"
                android:inputType="numberDecimal"
                android:textColor="@color/text_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/ButtonTextOnly"
            android:id="@+id/running_save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_workout"
            android:visibility="gone"
            />
        <Button
            style="@style/ButtonTextOnly"
            android:id="@+id/running_edit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_workout"
            android:visibility="gone"/>
        <Button
            style="@style/ButtonTextOnly"
            android:id="@+id/running_delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_workout"
            android:visibility="gone"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>