<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_analytics">

    <fragment
        android:id="@+id/navigation_analytics"
        android:name="com.example.lightweight.ui.Analytics.AnalyticsFragment"
        android:label="@string/title_analytics"
        tools:layout="@layout/fragment_analytics"  />

    <fragment
        android:id="@+id/navigation_feed"
        android:name="com.example.lightweight.ui.Feed.FeedFragment"
        android:label="@string/title_feed"
        tools:layout="@layout/fragment_feed" />

    <fragment
        android:id="@+id/navigation_social"
        android:name="com.example.lightweight.ui.Social.SocialFragment"
        android:label="@string/title_social"
        tools:layout="@layout/fragment_social" />
</navigation>